--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -16,7 +16,8 @@
                 <ResourceDictionary Source="Assets/Themes/SliderTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/CreatedPensRadioButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
-                <ResourceDictionary Source="Assets/Images/PenIcon.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/EditingWindowButtons.xaml"/>
+                <ResourceDictionary Source="Assets/Images/PenIcon.xaml"/> 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
